# i18n

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: docs.yml
docs/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/i18n/: all.html  enum.FluentError.html  enum.FluentValue.html  enum.ReferenceKind.html  enum.ResolverError.html  index.html  macro.attr.html  macro.langid.html  macro.langids!.html  macro.langids.html  macro.langs.html  macro.load.html  macro.tr.html  sidebar-items.js  struct.AttrCache.html  struct.FluentArgs.html  struct.FluentResource.html  struct.Lang.html  struct.LanguageIdentifier.html  struct.Locale.html  struct.Locales.html  struct.Message.html  struct.Query.html  trait.LocalizedDisplay.html  type.FluentBundle.html
docs/i18n/lazy_static/: fn.initialize.html  index.html  macro.lazy_static.html  trait.LazyStatic.html  trait.__Deref.html
docs/i18n_loader/: all.html  enum.FluentError.html  enum.FluentValue.html  enum.ReferenceKind.html  enum.ResolverError.html  index.html  macro.langid.html  macro.langids.html  sidebar-items.js  struct.AttrCache.html  struct.FluentArgs.html  struct.FluentResource.html  struct.LanguageIdentifier.html  struct.Locale.html  struct.Locales.html  struct.Message.html  struct.Query.html  type.FluentBundle.html
docs/i18n_macros/: all.html  index.html  macro.attr.html  macro.langs!.html  macro.langs.html  macro.load.html  macro.tr.html  sidebar-items.js
docs/search.desc/i18n/: i18n-desc-0-.js
docs/search.desc/i18n_loader/: i18n_loader-desc-0-.js
docs/search.desc/i18n_macros/: i18n_macros-desc-0-.js
docs/src/i18n/: lib.rs.html
docs/src/i18n_loader/: lib.rs.html
docs/src/i18n_macros/: attr.rs.html  lib.rs.html  load.rs.html  tr.rs.html
i18n-lang/: Cargo.toml
i18n-lang/src/: lib.rs
i18n-loader/: Cargo.toml
i18n-loader/src/: lib.rs
i18n-macros/: Cargo.toml
i18n-macros/src/: attr.rs  langid_to_country_flag.rs  langid_to_name.rs  langs.rs  lib.rs  load.rs  tr.rs  utils.rs
i18n-macros/src/langs/: langid_to_country_flag.rs  langid_to_dir.rs  mod.rs
i18n/en-US/: main.ftl
src/: lib.rs
tests/: macros.rs  net.rs
tests/i18n/en-US/: argument-check.ftl  attribute-check.ftl
(+24 files in other folders)
