[package]
name = "i18n"
version = "0.1.1"
edition = "2021"

[dependencies]
i18n-macros = { path = "./i18n-macros" }
i18n-loader = { path = "./i18n-loader" }
i18n-lang = { path = "./i18n-lang" }

[workspace]
members = [ "i18n-lang",
  "i18n-loader",
  "i18n-macros",
]

[features]
net = ["i18n-loader/net"]

[dev-dependencies]
i18n = { path = ".", version = "0.1.0", features = ["net"] }
tokio = { version = "1", features = ["full"] }
mockito = "1"
serde_json = "1"
