[package]
name = "i18n-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
fluent-bundle = { version = "0.16" }
lazy_static = "1.5"
unic-langid = { version = "0.9", features = ["macros"] }
hyper = { version = "0.14", features = ["client", "http1"], optional = true }
hyper-tls = { version = "0.5", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }
thiserror = { version = "1.0", optional = true }
fluent-syntax = { version = "0.12", optional = true }
itertools = { version = "0.14", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["net"]
net = ["dep:hyper", "dep:hyper-tls", "dep:tokio", "dep:thiserror", "dep:fluent-syntax", "dep:itertools", "dep:serde_json"]

[dev-dependencies]
serde_json = "1.0"
